# blog-with-drf-and-auth

./: README.md  db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: urls.py  views.py
blog/: admin.py  forms.py  models.py  urls.py  views.py  widgets.py
blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_post_type_alter_post_content_polloption.py  0004_post_ends_at_post_max_choices_post_starts_at.py
chat/: urls.py  views.py
config/: asgi.py  context_processors.py  settings.py  urls.py
follows/: admin.py  models.py  urls.py  views.py
follows/migrations/: 0001_initial.py
notifications/: admin.py  consumers.py  models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_notification_actor_notification_url.py
static/: site.css
staticfiles/: site.css
templates/: base.html  home.html
templates/accounts/: dashboard.html  index.html  login.html  profile.html  profile_edit.html  signup.html
templates/blog/: _compose_modal_body.html  _post_card.html  _reply_modal_body.html  compose.html  confirm_delete.html  detail.html  form.html  index.html  reply.html  type_select.html
templates/chat/: index.html
templates/follows/: index.html  people.html
templates/notifications/: list.html
