[project]
name = "blog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.6",
    "django-allauth>=65.11.2",
    "djangorestframework>=3.16.1",
    "pillow>=11.3.0",
]
