[project]
name = "blog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.3.1",
    "crispy-bootstrap5>=2025.6",
    "daphne>=4.2.1",
    "django>=5.2.6",
    "django-allauth>=65.11.2",
    "django-ckeditor>=6.7.3",
    "djangorestframework>=3.16.1",
    "pillow>=11.3.0",
]
